# quant_trade

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: TECHNICAL_SUMMARY.md  Tauri2无边框窗口实现总结.md  app-icon-generation-guide.md  quant_ultimate_accordion_sandbox.html  交互方案.html  产品需求.md  技术方案.md  项目进度管理.md
docs/superpowers/specs/: 2026-05-15-m3-kline-chart-design.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: tauri-test.html
frontend/src/: App.tsx  global.d.ts  index.css
frontend/src/api/: data.ts  stockNames.ts  tencent.ts
frontend/src/components/: BottomPanel.tsx  ChartToolbar.tsx  KlineChart.tsx  Layout.tsx  LeftPanel.tsx  RightPanel.tsx  TopBar.tsx
frontend/src/store/: index.ts
frontend/src/styles/: theme.css
frontend/src/types/: index.ts
frontend/src/utils/: mockData.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: data.rs
src-tauri/src/data/: cache.rs  loader.rs  mod.rs  tdx.rs  tests.rs  types.rs
src-tauri/src/errors/: errors.rs
